<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/back_login"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_registro"
            android:textSize="23sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp">
        </TextView>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="asssets"
            app:lottie_fileName="plataforma.json"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            android:layout_marginBottom="25dp">
        </com.airbnb.lottie.LottieAnimationView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nombres"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/txt_nombres">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_apellidos"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/txt_apellidos">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_correo"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCorreoRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/txt_correo">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_password_r"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/txt_password_r"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_confirmar_password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPasswordConfirmedRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/lbl_confirmar_password"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/BtnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:text="@string/btn_registrar"/>

        <TextView
            android:id="@+id/BackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingBottom="30dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/lbl_go_to_login">
        </TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>